Add configuration of errors in login

--- a/stashManagerApple/stashManagerApple/Info.plist
+++ b/stashManagerApple/stashManagerApple/Info.plist
@@ -8,6 +8,7 @@
 		<string>Montserrat-SemiBold.ttf</string>
 		<string>Montserrat-ExtraBold.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-Light.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
